<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GTNavigate</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_label">Search:</string>
    <string name="search_hint">hint</string>
    <string name="Search">search</string>
    <string name="enter_address">Enter Address</string>
    <string name="menu">Menu</string>
    <string name="search1">Search</string>
    <string name="title_activity_menu">Menu</string>
    <string name="directory">Directory</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="ian">Androdian</string>
    <string name="vraj">Vraj Patel</string>
    <string name="guo">Qiang Guo</string>
    <string name="harry">Harrison English</string>
    <string name="foggy">Michael Fogg</string>
    <string name="huy">Huy Tran</string>

</resources>