<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dip" >
    </LinearLayout>

    <EditText
        android:id="@+id/uname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:singleLine="true"
        android:hint="@string/enter_address" >
        

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_1"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignRight="@+id/uname"
        android:layout_below="@+id/uname"
        android:text="@string/search1" />

    <Button
        android:id="@+id/mbutton2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_1"
        android:layout_below="@+id/button_1"
        android:text="@string/menu" />

	</RelativeLayout>